@@ -1,3 +1,9 @@
+2006-10-11  Darin Adler  <darin@apple.com>
+
+        Reviewed by John Sullivan.
+
+        * WebKitSystemInterface.h: Updated to a C++-compatible version.
+
 2006-08-31  Adele Peterson  <adele@apple.com>
 
         Reviewed by John Sullivan.
